# xinao-seed-lab

./: .coverage  .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  30-grok-asymmetric-window-isolation.md  AGENTS.md  CODEX_S_L0.md  ISOLATION_MARKER.md  PROJECT_MANIFEST.json  README.md  REPO_LAYOUT_READ_ME.md  SEED_CORTEX_MUST_READ_FIRST.md  coverage.xml  docker-compose.thin-glue.yml  docker-compose.xinao-base.yml  docker-compose.yml  integrated_bus_proof.txt  phase0_proof.txt  pyproject.toml
docker/f4-verifier/: Dockerfile  build_inputs.v1.json  frozen_inputs.v1.json  production_checker_inputs.v1.json  pyproject.toml  write_execution_contract.py
projects/dual-brain-coordination/: .gitleaks.toml  README.md  pyproject.toml
projects/dual-brain-coordination/adapters/amq/: Invoke-XinaoAmqInboxBridge.ps1  ingest.py  mapping.py  outbox.py  transport.py
projects/dual-brain-coordination/adapters/env/: Set-XinaoDualBrainRoleEnv.ps1
projects/dual-brain-coordination/adapters/grok/: Invoke-XinaoCoord.ps1  Invoke-XinaoGrokAcp.ps1
projects/dual-brain-coordination/adapters/temporal/: Invoke-PromotedTemporalWorker.ps1  README.md  canary_start_workflow.py  canonical_grok_host_deployment.v1.json  client.py  deployment_management.py  (+11 more)
projects/dual-brain-coordination/docs/: EXTERNAL_MODULE_EVALUATION.md  INTENT.md  OPERATIONS.md  ROLLBACK_NEGATIVE.md  TEMPORAL_WORKER_OPS.md
projects/dual-brain-coordination/provisioning/: Invoke-XinaoAcpxManaged.ps1  Invoke-XinaoCoordManaged.ps1  Invoke-XinaoCoordReconcile.ps1  _lane_c_build_pin.ps1  acpx-grok-config.json  acpx-toolchain-lock.json  build-constraints.txt  grok-background-requirements.v1.toml  grok-background-tool-surface.v1.toml  temporal_mcp_pin.json  toolchain-lock.json
projects/dual-brain-coordination/scripts/: Invoke-G7AmqCliMcpReverify.ps1  Invoke-LeaseNegativeCanary.ps1  Invoke-T1T2T5E2ECanary.ps1  Invoke-T6T7T8E2ECanary.ps1  Invoke-T9TemporalLiveCanary.ps1  Watch-VisibleConsoleWindows.ps1  _admin_night_checkpoint_20260712.py  _e_amq_nondestructive_regression.py  _l0_m1_frequency_null_canary.py  _s1_cli_amq_smoke_evidence.py  _s2_promote_idempotent_evidence.py  _s3_dual_source_verifier.py  _s3_ssot_read_adapter.py  _s4_route_score_false.py  _t5_canary_evidence.py  mcp_smoke.py  observe_visible_console_windows.py  probe_hidden_windows_child.mjs  refresh_g6_s0s8_progress_index.py  run_canonical_grok_transaction.py  run_grok_background_window_canary.py  run_grok_terminal_negative_canary.py  run_temporal_kernel_convergence_canary.py  verify_c01_native_capability.py  verify_c11_readonly_independence.py  verify_c13_live_stop.py  verify_c14_supply_chain.py  verify_temporal_kernel_convergence.py
projects/dual-brain-coordination/tests/: AcpxProvisioning.Tests.ps1  Reconciler.Tests.ps1  test_agent_controller.py  test_agent_operations.py  test_agent_worker_outcomes.py  test_amq_t1.py  test_c01_c15_runtime_safety.py  test_c07_headless_evidence.py  test_c10_budget_verifier.py  test_c11_acceptance_gate.py  test_canonical_grok_transaction_lifecycle.py  test_cli.py  test_cli_mcp_parity.py  test_grok_temporal_acpx.py  test_grok_temporal_workflow.py  test_legacy_root_retirement.py  test_m_keep.py  test_mcp_role_binding.py  test_mcp_smoke_contract.py  test_notifications.py  test_promoted_history_replay_tool.py  test_provisioning_contract.py  test_route.py  test_stateful.py  test_stop_lease_deep.py  test_t1t2t5_vertical_slice.py  test_t9_temporal_live.py  test_t9_temporal_promoted_adapter.py  test_temporal_canary_kernel_route.py  test_temporal_surface_contract.py  test_worker_deployment_manifest.py  test_worker_deployment_versioning.py
projects/g4-hidden-capability-seam/: README.md  pyproject.toml
projects/g4-hidden-capability-seam/adapters/: promptfoo_c0_bootstrap_adapter.py  promptfoo_subject_adapter.py
projects/g4-hidden-capability-seam/contracts/: calibration_contract.v1.json  security_model.v1.json
projects/g4-hidden-capability-seam/schemas/: required_objects.v1.json
projects/g4-hidden-capability-seam/tests/: test_real_bootstrap.py  test_seam_core.py
xinao_discovery/: .dvcignore  README.md  dvc.yaml  pyproject.toml
xinao_discovery/.dvc/: config
xinao_discovery/artifacts/: .gitignore
xinao_discovery/docker/: canonical-golden.Dockerfile  migrator.Dockerfile
xinao_discovery/evals/agent_admission/: admission_provider.py  assert_admission.js  cases.yaml  promptfooconfig.yaml
xinao_discovery/evals/handoff/: assert_handoff.js  cases.yaml  handoff_provider.py  promptfooconfig.yaml
xinao_discovery/migrations/: alembic.ini  env.py  script.py.mako
xinao_discovery/migrations/confirmation/: alembic.ini  env.py  script.py.mako
xinao_discovery/migrations/versions/: 0001_event_ledger.py  0002_append_only_freeze.py  0003_shadow_accounting.py  0004_closed_period_journal_guard.py  0005_frozen_decision_science_kind.py
xinao_discovery/pipeline/: lineage_inputs.v1.json
xinao_discovery/schemas/evidence/: capability_manifest.schema.json  input_manifest.schema.json
xinao_discovery/scripts/: __init__.py
xinao_discovery/scripts/backup/: __init__.py  create_backup.py  restore_drill.py
xinao_discovery/scripts/pipeline/: build_lineage_seed.py
xinao_discovery/scripts/probe/: capability_probe.py  lineage_delivery_probe.py  operator_projection_probe.py  optuna_resume_worker.py  p11_domain_checks.py  postgres_ledger_probe.py  shadow_accounting_probe.py  validation_court_probe.py
xinao_discovery/scripts/register/: formal_vertical.py
xinao_discovery/scripts/replay/: canonical_golden.py
xinao_discovery/scripts/schema/: export_contract_schemas.py
xinao_discovery/scripts/verify/: rule_source_special_number.py
xinao_discovery/src/xinao/: __init__.py  cli.py
xinao_discovery/tests/: conftest.py
xinao_discovery/tests/contract/: test_authority_contract.py  test_baseline.py  test_catalog.py  test_domain_schemas.py  test_handoff.py  test_input_manifest.py  test_validation_protocol.py  test_world.py
xinao_discovery/tests/property/: test_canonical.py
xinao_discovery/tests/unit/: test_canonical.py
(+1677 files in other folders)
