[project]
name = "xinao-codex-local-capabilities"
version = "0.2.0"
description = "Thin local memory, intake, and evaluation capabilities for Codex on Windows."
requires-python = ">=3.11"
dependencies = [
  "mcp>=1",
  "mem0ai>=2.0.11,<3",
  "ollama>=0.4",
  "portalocker>=3.2,<4",
  "qdrant-client>=1.12",
]

[project.optional-dependencies]
dev = [
  "markitdown>=0.1.5,<0.2",
  "polars>=1.42,<2",
  "pytest>=9",
  "ruff>=0.9",
]
human-capabilities = [
  "duckdb>=1.5,<2",
  "faster-whisper>=1.2,<2",
  "jupyterlab>=4.6,<5",
  "markitdown[docx,outlook,pdf,pptx,xls,xlsx]>=0.1.5,<0.2",
  "polars>=1.42,<2",
]
workflow = [
  "ddgs>=9.14.4,<10",
  "docker==7.1.0",
  "GitPython>=3.1,<4",
  "jinja2>=3.1,<4",
  "langgraph>=1.2,<2",
  "langgraph-checkpoint-sqlite>=3.1,<4",
  "pydantic>=2.13,<3",
  "PyYAML>=6,<7",
  "temporalio>=1.30,<2",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["services", "tests", "scripts"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401", "F841"]
