[project]
name = "xinao-codex-local-capabilities"
version = "0.2.0"
description = "Thin local memory, intake, and evaluation capabilities for Codex on Windows."
requires-python = ">=3.11"
dependencies = [
  "mcp>=1",
  "mem0ai>=2.0.11,<3",
  "ollama>=0.4",
  "openai>=2.44,<3",
  "portalocker>=3.2,<4",
  "qdrant-client>=1.12",
]

[project.optional-dependencies]
dev = [
  "hypothesis==6.156.6",
  "markitdown>=0.1.5,<0.2",
  "polars>=1.42,<2",
  "pytest>=9",
  "ruff>=0.9",
]
human-capabilities = [
  "duckdb>=1.5,<2",
  "faster-whisper>=1.2,<2",
  "jupyterlab>=4.6.2,<5",
  "markitdown[docx,outlook,pdf,pptx,xls,xlsx]>=0.1.5,<0.2",
  "polars>=1.42,<2",
]
workflow = [
  "apsw==3.53.3.1",
  "ddgs>=9.14.4,<10",
  "docker==7.2.0",
  "GitPython>=3.1,<4",
  "jinja2>=3.1,<4",
  "jsonschema>=4.25,<5",
  "langgraph>=1.2,<2",
  "langgraph-checkpoint-sqlite>=3.1,<4",
  "pydantic>=2.13,<3",
  "PyYAML>=6,<7",
  "rfc8785==0.1.4",
  "temporalio>=1.30,<2",
  "uuid6==2025.0.1",
  "xinao-discovery; python_version >= '3.12' and python_version < '3.13'",
]

[tool.uv]
package = false

[tool.uv.sources]
xinao-discovery = { path = "xinao_discovery", editable = true }

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["services", "tests", "scripts"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401", "F841"]
