[build-system]
requires = ["hatchling==1.28.0"]
build-backend = "hatchling.build"

[project]
name = "xinao-discovery"
version = "0.1.0"
description = "Canonical contracts and vertical slices for the Xinao discovery system."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic==1.18.5",
  "arch==8.0.0",
  "mapie==1.4.1",
  "optuna==4.9.0",
  "pandera==0.32.1",
  "pydantic==2.13.4",
  "psycopg[binary]==3.3.4",
  "rfc8785==0.1.4",
  "scikit-learn==1.9.0",
  "scipy==1.18.0",
  "sqlalchemy==2.0.51",
  "statsmodels==0.14.6",
  "uuid6==2025.0.1",
  "dvc==3.67.1",
  "mlflow==2.22.0",
  "openlineage-python==1.51.0",
  "opentelemetry-api==1.43.0",
  "opentelemetry-sdk==1.43.0",
]

[project.scripts]
xinao = "xinao.cli:main"

[dependency-groups]
dev = [
  "hypothesis==6.156.6",
  "jsonschema==4.26.0",
  "pytest==9.1.1",
  "ruff==0.15.14",
]

[tool.hatch.build.targets.wheel]
packages = ["src/xinao"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
